# CCDS_Tech_for_Good_Hackathon_20226

./: README.md  pyproject.toml
src/: langchain_workshop.ipynb
src/beautiful_soup/: BeautifulSoupWS.ipynb
src/pygame/: pygame.ipynb
